--- a/versions.gradle
+++ b/versions.gradle
@@ -11,7 +11,7 @@ def versions = [:]
 versions.android_gradle_plugin = '3.3.0-alpha03'
 
 // Kotlin
-versions.kotlin = "1.2.51"
+versions.kotlin = "1.2.60"
 
 // Android support
 versions.app_compat = "1.0.0-beta01"
@@ -22,6 +22,10 @@ versions.constraint_layout = "1.1.2"
 versions.test_runner = "1.0.0-beta01"
 versions.espresso_core = "3.1.0-alpha4"
 versions.support = "27.1.1"
+
+// Google Play services
+versions.play = "15.0.1"
+versions.play_tagmanager = "16.0.1"
 
 // Architecture components
 versions.arch_core = "1.1.1"
@@ -51,10 +55,16 @@ versions.rxjava2 = "2.1.3"
 versions.rx_android = "2.0.1"
 
 // Timber
-versions.timber = "4.5.1"
+versions.timber = "4.7.1"
 
 // Glide
 versions.glide = "4.7.1"
+
+// RxPermissions
+versions.rxpermissions = "0.10.2"
+
+// RxLocation
+versions.rxlocation = "1.0.5"
 
 versions.mockwebserver = "3.8.1"
 versions.apache_commons = "2.5"
@@ -100,6 +110,13 @@ support.espresso_core = "androidx.test.espresso:espresso-core:$versions.espresso
 deps.support = support
 
 deps.constraint_layout = "androidx.constraintlayout:constraintlayout:$versions.constraint_layout"
+
+// Google Play services
+def play = [:]
+play.location = "com.google.android.gms:play-services-location:$versions.play"
+play.maps = "com.google.android.gms:play-services-maps:$versions.play"
+play.tagmanager = "com.google.android.gms:play-services-tagmanager:$versions.play_tagmanager"
+deps.play = play
 
 // Architecture components
 def arch_core = [:]
@@ -173,6 +190,12 @@ glide.compiler = "com.github.bumptech.glide:compiler:$versions.glide"
 glide.recyclerview_integration = "com.github.bumptech.glide:recyclerview-integration:$versions.glide"
 deps.glide = glide
 
+// RxPermissions
+deps.rxpermissions = "com.github.tbruyelle:rxpermissions:$versions.rxpermissions"
+
+// RxLocation
+deps.rxlocation = "com.patloew.rxlocation:rxlocation:$versions.rxlocation"
+
 // JUnit
 deps.junit = "junit:junit:$versions.junit"
 
@@ -181,6 +204,7 @@ ext.deps = deps
 static def addRepos(RepositoryHandler handler) {
     handler.google()
     handler.jcenter()
+    handler.maven { url 'https://jitpack.io' }  // Used by RxPermissions
 }
 
 ext.addRepos = this.&addRepos
