Apply dependencies instead of versions

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    apply from: 'versions.gradle'
+    apply from: 'dependencies.gradle'
     addRepos(repositories)
     dependencies {
         classpath deps.android_gradle_plugin
